--- a/portal/getPrice/option/display.html
+++ b/portal/getPrice/option/display.html
@@ -1,4 +1,4 @@
-{# Ahmad Karimi #}
+{# Reza Mohiti #}
 {% extends layout %}
 {% block content %}
 <form class="ajx" method="post" action="getPrice/option">
