--- a/portal/graduate/classes/display.html
+++ b/portal/graduate/classes/display.html
@@ -1,4 +1,4 @@
-{# Ahmad Karimi ahmadkarimi1991@gmail.com #}
+{# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
 <form class="ajx" method="post" action="graduate/{{global.url}}">
