--- a/portal/home/home/display.html
+++ b/portal/home/home/display.html
@@ -1,4 +1,4 @@
-{# Ahmad Karimi ahmadkarimi1991@gmail.com #}
+{# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
 <h3>{{global.gender}} {{global.name}} {{global.family}}</h3>
