--- a/portal/users/option/display.html
+++ b/portal/users/option/display.html
@@ -1,77 +1,7 @@
-{# Ahmad Karimi ahmadkarimi1991@gmail.com #}
+{# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<style>
-	.box {
-		margin-top: 100px;
-		left: 50%;
-		position: absolute;
-		overflow: auto;
-		/*transform: translate(-50%, -50%);*/
-	}
-
-	.input-label {
-		font-family: 'WRoya';
-		width: 90px !important;
-	}
-
-	.login-logo {
-		margin-bottom: 20px;
-	}
-
-	.login-logo img {
-		display: block;
-		margin: 0 auto;
-	}
-
-	.login-form {
-		background: #fff;
-		padding: 20px;
-		border-top: 3px solid #0C706F;
-		border-bottom: 3px solid #0C706F;
-		width: 400px;
-		margin: 0 auto;
-	}
-
-	.formx {
-		float: none;
-	}
-
-	.form-element a, .form-element label, .form-element button {
-		font-family: 'WRoya';
-	}
-</style>
-<!-- <div class="box"> -->
-<!-- 	<div class="login-logo">
-		<a class="a-undefault" href="/">
-			<img src="static/img/logo.png" alt="" height="200">
-		</a>
-	</div> -->
-	<!-- <div class="login-form"> -->
-	
-		{%if debug%}
-		<div class="submit-status" style="float: none">
-			{%for key, debugs in debug%}
-				{%if key != "status" and key != "msg"%}
-				<ul class="submit-status-{{key}}">
-					{%for cKey, cDebug in debugs%}
-						{%if cDebug.error is defined%}
-							<li>{{cDebug[cDebug.group]}} : {{cDebug.error}}</li>
-						{%else%}
-							<li>{{cDebug}}</li>
-						{%endif%}
-					{%endfor%}
-				</ul>
-				{%endif%}
-			{%endfor%}
-			<!-- <a href="users/register">Back</a>
-			<a href="login">Login</a> -->
-		</div>
-		{%endif%}
-	<form class="formx" method="post" action="/portal/users/{{global.url}}">
-			{{forms.make(form.users)}}
-			<!-- {{tagMaker.make(regulation)}} -->
-	</form>
-	<!-- </div> -->
-<!-- </div> -->
+<form class="formx" method="post" action="users/{{global.url}}">
+	{{forms.make(form.users)}}
+</form>
 {%endblock%}
