--- a/portal/-.-/home/display.html
+++ b/portal/-.-/home/display.html
@@ -1,4 +1,4 @@
-{# Ahmad Karimi ahmadkarimi1991@gmail.com #}
+{# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
 <h1>Profile</h1>
