users insert and update

--- a/portal/users/option/display.html
+++ b/portal/users/option/display.html
@@ -1,7 +1,7 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<form class="formx" method="post" action="users/{{global.url}}">
+<form class="ajx" method="post" action="users/{{global.url}}">
 	{{forms.make(form.users)}}
 </form>
 {%endblock%}
