group paln place course

--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -11,7 +11,7 @@
 	{{ tagMaker.list(classes_list) }}
 </div>
 <br>
-<form class="zjx" method="post" action="classification/{{global.url}}">
+<form class="ajx" method="post" action="classification/{{global.url}}">
 	{{forms.make(search)}}
 </form>
 {{tagMaker.list(person)}}
