--- a/portal/login/home/display.html
+++ b/portal/login/home/display.html
@@ -39,7 +39,7 @@
 		</a>
 	</div>
 	<div class="login-form">
-		<form class="reza_ajx" method="post" action="login">
+		<form class="ajx" method="post" action="login">
 			{{forms.make(form.users)}}
 		</form>
 		{%if debug%}
