--- a/portal/users/list/display.html
+++ b/portal/users/list/display.html
@@ -1,7 +1,7 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<form class="zjx" method="post" action="users/status=list">
+<form class="xajx" method="post" action="users/status=list">
 	{{forms.make(search)}}
 </form>
 {{tagMaker.list(person)}}
