--- a/portal/login/home/display.html
+++ b/portal/login/home/display.html
@@ -31,7 +31,7 @@
 	border-bottom: 3px solid #0C706F;
 }
 </style>
-<div class="box">.
+<div class="box">
 
 	<div class="login-logo">
 		<a class="a-undefault" href="/">
@@ -39,7 +39,7 @@
 		</a>
 	</div>
 	<div class="login-form">
-		<form class="ajx" method="post" action="login">
+		<form class="xajx" method="post" action="login">
 			{{forms.make(form.users)}}
 		</form>
 		{%if debug%}
