--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -1,20 +1,76 @@
 {% extends layout %}
 {% block content %}
+<style type="text/css">
+	.duplicate{
+		background: red;
+	}
+	.insert{
+		background: green;
+	}
+	.failed{
+		background: black;
+	}
+</style>
+
 <!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
 <br>
 <div id="result"></div>
+
 <!-- classes list -->
 <div class="class-detail">
 	{{ tagMaker.list(classes_list) }}
 </div>
 <br>
+
+<!-- search form -->
 <form class="xajx" method="post" action="classification/{{global.url}}">
 	{{forms.make(search)}}
 </form>
 
+<!-- person list -->
 {{tagMaker.list(person)}}
 
+<script type="text/javascript">
+	$(".ajxClassification").click(function(){
+		URL = $(this).attr("xhref");
+		tag = $(this);
+		$.ajax({
+			type: "POST",
+			url : URL,
+			success : function(data){
+				if(data.msg.duplicate){
+					$(tag).addClass("duplicate").text(data.msg.duplicate)
+				}else if(data.msg.insert) {
+					$(tag).addClass("insert").text(data.msg.insert)
+				}else if(data.msg.failed) {
+					$(tag).addClass("failed").text(data.msg.failed)
+				}
+			}
+		});
+	});
+
+	// $(document).ready(function(){
+	// 	load_class_list();
+	// })
+
+	// function load_class_list() {
+	// 	tag = $(this);
+	// 	$.ajax({
+	// 		type: "POST",
+	// 		url : URL,
+	// 		success : function(data){
+	// 			if(data.msg.duplicate){
+	// 				$(tag).addClass("duplicate").text(data.msg.duplicate)
+	// 			}else if(data.msg.insert) {
+	// 				$(tag).addClass("insert").text(data.msg.insert)
+	// 			}else if(data.msg.failed) {
+	// 				$(tag).addClass("failed").text(data.msg.failed)
+	// 			}
+	// 		}
+	// 	});
+	// }
+</script>
 {%endblock%}
