--- a/portal/users/list/display.html
+++ b/portal/users/list/display.html
@@ -1,6 +1,6 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
-{%block content%}
+{%block body%}
 <form class="xajx" method="post" action="users/status=list">
 	{{forms.make(search)}}
 </form>
