classes detail convert id to name in list

--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -128,7 +128,7 @@
 			buttons: {
 				"بستن": function() {
 					dialog.dialog( "close" );
-					window.location.reload();
+					// window.location.reload();
 				}
 			},
 			close: function() {
