i love programing life :)

--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -33,7 +33,7 @@
 
 
 <div id="dialog-form" title="نمایش افراد جهت ثبت در کلاس">
-	<iframe src="http://haram.dev/portal/classification/search/classesid={{global.classesid}}"></iframe>
+	<iframe src="classification/search/classesid={{global.classesid}}"></iframe>
 </div>
 
 
