--- a/portal/province/option/display.html
+++ b/portal/province/option/display.html
@@ -4,4 +4,5 @@
 <form class="ajx" method="post" action="province/{{global.url}}">
 	{{forms.make(form.province)}}
 </form>
+{{tagMaker.list(list)}}
 {%endblock%}
