--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -3,8 +3,8 @@
 <!-- ************************************************************************************** -->
 <!-- popup -->
 <style>
-	body { font-size: 62.5%; }
-	label, input { display:block; }
+	/*body { font-size: 62.5%; }*/
+	/*label, input { display:block; }*/
 	input.text { margin-bottom:12px; width:95%; padding: .4em; }
 	fieldset { padding:0; border:0; margin-top:25px; }
 	h1 { font-size: 1.2em; margin: .6em 0; }
@@ -27,6 +27,9 @@
 		height: 100%;
 		outline: none;
 		border: none;
+	}
+	@media print {
+	
 	}
 </style>
 
