--- a/portal/test/option/display.html
+++ b/portal/test/option/display.html
@@ -23,46 +23,7 @@
 			<div class="detail-card-title">اطلاعات فردی</div>
 			
 			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-				
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
+				{{tagMaker.make(list)}}
 			</div>
 			
 			<div class="detail-card-footer">
@@ -72,122 +33,15 @@
 				<div class="clearbox"></div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 	<div class="detail-card">
 		<div class="detail-card-body">
-			<div class="detail-card-title">فایل های فراگیر</div>
+			<div class="detail-card-title">اطلاعات فردی</div>
+			
 			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
+				{{tagMaker.list(list1)}}
 			</div>
+			
 			<div class="detail-card-footer">
 				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;"></a>
 				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;"></a>
@@ -195,97 +49,15 @@
 				<div class="clearbox"></div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 	<div class="detail-card">
 		<div class="detail-card-body">
-			<div class="detail-card-title">اطلاعات پرسنلی</div>
+			<div class="detail-card-title">اطلاعات فردی</div>
+			
 			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
+				{{tagMaker.list(list2)}}
 			</div>
+			
 			<div class="detail-card-footer">
 				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;"></a>
 				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;"></a>
@@ -293,8 +65,7 @@
 				<div class="clearbox"></div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 	<div class="clearbox"></div>
 </div>
 <div class="left">
