--- a/portal/test/option/display.html
+++ b/portal/test/option/display.html
@@ -1,6 +1,8 @@
 {# reza mohiti #}
 {% extends layout %}
-{% block content %}
+{% block head %}
+{{ parent() }}
+
 <style type="text/css">
 	.right {
 		float: right;
@@ -16,328 +18,16 @@
 		clear: both;
 	}
 </style>
+{%endblock%}
 
-<!-- you must be crate macro to make it -->
-<!-- //////////////////////////////////////// -->
-{%- macro list(array) -%}
-<div class="detail-card">
-		<div class="detail-card-body">
-			<div class="detail-card-title">{{array.title}}</div>
-			
-			<div class="detail-card-content">
-				{{tagMaker.make(array.list)}}
-			</div>
-			
-			<div class="detail-card-footer">
-				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;" href="{{array.morelink}}"></a>
-				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;" href="{{array.addlink}}"></a>
-				<a href="#" class="ico icoedit" style="float:left; margin-right: 5px;" href="{{array.editlink}}"></a>
-				<div class="clearbox"></div>
-			</div>
-		</div>
-	</div>
-{%- endmacro -%}
-<!-- //////////////////////////////////////// -->
+{% block content %}
 
+{{tagMaker.card(list)}}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="right">
-	<div class="detail-card">
-		<div class="detail-card-body">
-			<div class="detail-card-title">اطلاعات فردی</div>
-			
-			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-				
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<div class="detail-card-footer">
-				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoedit" style="float:left; margin-right: 5px;"></a>
-				<div class="clearbox"></div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="detail-card">
-		<div class="detail-card-body">
-			<div class="detail-card-title">فایل های فراگیر</div>
-			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="detail-card-footer">
-				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoedit" style="float:left; margin-right: 5px;"></a>
-				<div class="clearbox"></div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="detail-card">
-		<div class="detail-card-body">
-			<div class="detail-card-title">اطلاعات پرسنلی</div>
-			<div class="detail-card-content">
-				<table class="table-list">
-					<tr>
-						<th>
-							نام پدر به انگلیسی
-						</th>
-						<td>
-							haj agh javade bad ghomie bache azar
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-
-					<tr>
-						<th>
-							1
-						</th>
-						<td>
-							2
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="detail-card-footer">
-				<a href="#" class="ico icomore" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoadd" style="float:left; margin-right: 5px;"></a>
-				<a href="#" class="ico icoedit" style="float:left; margin-right: 5px;"></a>
-				<div class="clearbox"></div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="clearbox"></div>
-</div>
 <div class="left">
 	<div class="user-image">
 		<img src="static/img/avatar.png" alt="user image">
 	</div>
 </div>
-<div class="clearbox"></div>
+<div style="clear: both;"></div>
 {%endblock%}
