--- a/portal/users/detail/display.html
+++ b/portal/users/detail/display.html
@@ -1,34 +1,7 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<style type="text/css">
-th {
-	background: #ccc;
-	width: 250px;
-	text-align: left;
-	padding-left: 10px;
-}
-tr:nth-child(even) {background: #ececec}
-tr:nth-child(odd) {background: #FFF}
-</style>
-<table class="table-list">
-	{% for key, link in list[0] %}
-	<tr>
-		<th>{{key}}</th>
-		<td>{{link}}</td>
-	</tr>
-	{%endfor%}
-	{% for key, link in list[1] %}
-	<tr>
-		<th>{{key}}</th>
-		<td>{{link}}</td>
-	</tr>
-	{%endfor%}
-		{% for key, link in list[2] %}
-	<tr>
-		<th>{{key}}</th>
-		<td>{{link}}</td>
-	</tr>
-	{%endfor%}
-</table>
+{{tagMaker.card(person)}}
+{{tagMaker.card(student1)}}
+{{tagMaker.card(bridge)}}
 {%endblock%}	
