--- a/portal/macro/tagMaker.html
+++ b/portal/macro/tagMaker.html
@@ -59,7 +59,7 @@
 	<div class="right">
 		<div class="detail-card">
 			<div class="detail-card-body">
-				<div class="detail-card-title">{{array.title}}</div>
+				<div class="detail-card-title">{{array.title|lang}}</div>
 				
 				<div class="detail-card-content">
 					{{-tag.detail(array.list)-}}
