--- a/portal/classification/printlist/display.html
+++ b/portal/classification/printlist/display.html
@@ -102,21 +102,21 @@
 	  	</tr>
 	  	<tr>
 	    	<td class="small-font">تاریخ</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
-	    	<td class="small-font">...</td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
+	    	<td class="small-font"></td>
 	  	</tr>
 	  	<!-- end of header -->
 
