--- a/portal/users/detail/display.html
+++ b/portal/users/detail/display.html
@@ -2,6 +2,7 @@
 {% extends layout %}
 {%block content%}
 {{tagMaker.card(person)}}
+{{tagMaker.card(users)}}
 {{tagMaker.card(student1)}}
 {{tagMaker.card(bridge)}}
-{%endblock%}	
+{%endblock%}
