--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -66,20 +66,20 @@
 		    margin: 0 auto;
 		}*/
 	</style>
-	<link rel="stylesheet" type="text/css" href="static/datatable/css/jquery.dataTables.css">
-	<script type="text/javascript" language="javascript" src="static/datatable/js/jquery.dataTables.js"></script>
+	<link rel="stylesheet" type="text/css" href="static/DataTables/media/css/jquery.dataTables.min.css">
+	<script src="static/DataTables/media/js/jquery.dataTables.min.js"></script>
 	{%endblock%}
 </head>
 
 <body id="portal">
 	{% block body %}
 	<style type="text/css">
-	.deactive-tab{
-		border: none;
-		background: url(static/svg/tab-default.svg) no-repeat;
-		width: 193px;
-		opacity: .7;
-	}
+		.deactive-tab{
+			border: none;
+			background: url(static/svg/tab-default.svg) no-repeat;
+			width: 193px;
+			opacity: .7;
+		}
 	</style>
 	<div class="top-tape"></div>
 	<div class="header-portal">
