--- a/portal/test/data/display.html
+++ b/portal/test/data/display.html
@@ -3,12 +3,44 @@
 <link rel="stylesheet" type="text/css" href="static/DataTables/media/css/jquery.dataTables.min.css">
 <script src="static/DataTables/media/js/jquery.dataTables.min.js"></script>
 <style>
-	#example{
+	#data_table{
 		direction: rtl;
 		text-align: right;
 	}
+	.dataTable {
+		width: 100%;
+		border-spacing: 1px;
+	}
+	.dataTable tr.even {
+		background-color: #fafafa !important;
+	}
+	.dataTable tr.odd {
+		background-color: #f0f9f0 !important;
+	}
+	.dataTable tr:hover td {
+		color: #333;
+		background-color: #B0C4B0 !important;
+
+	}
+	.dataTable th {
+		background-color: #f0f9f0 !important;
+		color: #393939;
+		font-size: 12px;
+		font-family: "WYekan";
+	}
+	.dataTable td {
+		text-align: right;
+		padding: 5px 10px;
+		font-family: "WRoya";
+		color: #666;
+		font-size: 13px;
+		-webkit-transition: all 100ms linear;
+		-moz-transition: all 100ms linear;
+		-o-transition: all 100ms linear;
+		transition: all 100ms linear;
+	}
 </style>
-<table id="example" class="display" cellspacing="0" width="100%">
+<table id="data_table" class="display" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>نام</th>
@@ -44,13 +76,18 @@
 <script>
 	$(document).ready(function() {
 		var sesseion = ((Math.random()).toString()).replace(/^\d\./, "");
-		$('#example').dataTable( {
+		$('#data_table')
+		.on( 'draw.dt', function () {
+			$(".dataTables_info").persian_nu();
+			$(".dataTables_paginate a").persian_nu();
+		})
+		.dataTable( {
 			"processing": true,
 			"serverSide": true,
-			"ajax": "test/api/session="+sesseion,
+			"ajax": "users/list/api/session="+sesseion,
 			language: {
 				processing:     "درحال بارگذاری",
-				search:         "درحال جستجو&nbsp;:",
+				search:         "جستجو:",
 				lengthMenu:    "مقدار _MENU_ سطر",
 				info:           "مقدار _START_ تا _END_ از _TOTAL_ سطر",
 				infoEmpty:      "هیچ سطری یافت نشد",
@@ -69,8 +106,37 @@
 					sortAscending:  ": مرتب سازی صعودی",
 					sortDescending: ": مرتب سازی نزولی"
 				}
+			},
+			"columns": [
+			{ "data": "name" },
+			{ "data": "family" },
+			{ "data": "father" },
+			{ "data": "birthday" },
+			{ "data": "gender" },
+			{ "data": "nationalcode" },
+			{ "data": "code" },
+			{ "data": "marriage" },
+			{ "data": "education_id" },
+			{ "data": "id" },
+			{ "data": "id" }
+			],
+			"order": [[ 9, "asc" ]],
+			"lengthMenu": [[10, 25, 50], [10, 25, 50]],
+			"createdRow": function ( row, data, index ) {
+				var txt;
+				var more = $("td",row).eq(9);
+				more.persian_nu(true);
+				txt = more.text();
+				more.html('<a class="ico icomore ui-draggable ui-draggable-handle" href="users/status=detail/id='+txt+'"></a>');
+				$("td", row).persian_nu();
+
+				var edit = $("td",row).eq(10);
+				edit.persian_nu(true);
+				txt = edit.text();
+				edit.html('<a class="ico icoedit ui-draggable ui-draggable-handle" href="person/status=edit/id='+txt+'"></a>');
+				readyState($(row));
 			}
-		} );
-	} );
+		});
+});
 </script>
 {%endblock%}
