oldprice form_answer form_group form_group_item form_question branch_admin (for developer mod)

--- a/portal/users/list/display.html
+++ b/portal/users/list/display.html
@@ -1,5 +1,9 @@
 {%extends layout%}
 {% block content %}
+<form class="ajx" method="post" action="users/status=list">
+	{{forms.make(search)}}
+</form>
+{{tagMaker.list(person)}}
 <style>
 	#data_table{
 		direction: rtl;
