formmaker/testrun/formid=1

--- a/portal/macro/tagMaker.html
+++ b/portal/macro/tagMaker.html
@@ -71,13 +71,13 @@
 				
 				<div class="detail-card-footer">
 					{% if array.moreLink %}
-						<a href="{{array.moreLink}}"  class="ico icomore" style="float:left; margin-right: 5px;"></a>
+						<a href="{{array.moreLink}}"  class="icomore" style="float:left; margin-right: 5px;"></a>
 					{%endif%}
 					{% if array.addLink %}
-						<a href="{{array.addLink}}"  class="ico icoadd" style="float:left; margin-right: 5px;"></a>
+						<a href="{{array.addLink}}"  class="icoadd" style="float:left; margin-right: 5px;"></a>
 					{%endif%}
 					{% if array.editLink %}
-						<a href="{{array.editLink}}"  class="ico icoedit" style="float:left; margin-right: 5px;"></a>
+						<a href="{{array.editLink}}"  class="icoedit" style="float:left; margin-right: 5px;"></a>
 					{%endif%}
 					<div style="clear:both;"></div>
 				</div>
