--- a/portal/absence/option/display.html
+++ b/portal/absence/option/display.html
@@ -4,4 +4,5 @@
 <form class="ajx" method="post" action="absence/{{global.url}}">
 	{{forms.make(form.absence)}}
 </form>
+{{tagMaker.list(list)}}
 {%endblock%}
