--- a/portal/classification/absence/display.html
+++ b/portal/classification/absence/display.html
@@ -12,7 +12,7 @@
 </div>
 
 <script type="text/javascript">
-	$(".absence-date-main").click(function(){
+	$(".absence-date-main").blur(function(){
 		set_date();
 	});
 
@@ -20,6 +20,15 @@
 		set_date();
 	});
 	$(".absence-date-main").change(function(){
+		set_date();
+	});
+	$(".absence-date-main").focus(function(){
+		set_date();
+	});
+	$(".absence-date-main").focusout(function(){
+		set_date();
+	});
+	$(".absence-date-main").val().change(function(){
 		set_date();
 	});
 	function set_date() {
