--- a/portal/users/detail/display.html
+++ b/portal/users/detail/display.html
@@ -3,7 +3,6 @@
 {%block content%}
 {{tagMaker.card(person)}}
 {{tagMaker.card(users)}}
-{{tagMaker.card(student1)}}
 {{tagMaker.card(bridge)}}
-{{tagMaker.card(oldprice)}}
+{{tagMaker.card(olddb)}}
 {%endblock%}
