--- a/portal/users/list/display.html
+++ b/portal/users/list/display.html
@@ -1,6 +1,6 @@
 {%extends layout%}
 {% block content %}
-<form class="ajx" method="post" action="users/status=list">
+<form class="xajx" method="post" action="users/status=list">
 	{{forms.make(search)}}
 </form>
 {{tagMaker.list(person)}}
