--- a/portal/classification/absence/display.html
+++ b/portal/classification/absence/display.html
@@ -12,25 +12,26 @@
 </div>
 
 <script type="text/javascript">
-	$(".absence-date-main").blur(function(){
-		set_date();
-	});
+	$(".absence-date-main")[0].callBackDate = function(){
+		var date = $(this).val();
+		$(".absence-date").val(date);
+	}
 
-	$(".absence-date-main").keyup(function(){
-		set_date();
-	});
-	$(".absence-date-main").change(function(){
-		set_date();
-	});
-	$(".absence-date-main").focus(function(){
-		set_date();
-	});
-	$(".absence-date-main").focusout(function(){
-		set_date();
-	});
-	$(".absence-date-main").val().change(function(){
-		set_date();
-	});
+	// $(".absence-date-main").keyup(function(){
+	// 	set_date();
+	// });
+	// $(".absence-date-main").change(function(){
+	// 	set_date();
+	// });
+	// $(".absence-date-main").focus(function(){
+	// 	set_date();
+	// });
+	// $(".absence-date-main").focusout(function(){
+	// 	set_date();
+	// });
+	// $(".absence-date-main").val().change(function(){
+	// 	set_date();
+	// });
 	function set_date() {
 		var date = $(".absence-date-main").val();
 		$(".absence-date").each(function(){
