--- a/portal/formmaker/testrun/display.html
+++ b/portal/formmaker/testrun/display.html
@@ -2,7 +2,7 @@
 {% extends layout %}
 {% block content %}
 <h3> TEST RUN FORM MAKER :| </h3>
-<form method ="post" action ="changepasswd" class="ajx">
+<form method ="post" action ="{{global.url}}" class="ajx">
 	{{forms.make(q)}}
 </form>
 
