--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -68,6 +68,10 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="static/DataTables/media/css/jquery.dataTables.min.css">
 	<script src="static/DataTables/media/js/jquery.dataTables.min.js"></script>
+
+	<!-- Clock Picker -->
+	<link rel="stylesheet" href="static/clockpicker/jquery-clockpicker.css">
+	<script src="static/clockpicker/jquery-clockpicker.js"></script>
 	{%endblock%}
 </head>
 
