developed by ahmad

--- a/portal/ahmad/option/display.html
+++ b/portal/ahmad/option/display.html
@@ -3,4 +3,6 @@
 	<form class="ajx" method="post" action="ahmad/status=add">
 		{{forms.make(form.ahmad)}}
 	</form>
+
+	{{tagMaker.list(xx)}}
 {%endblock%}
