--- a/portal/home/home/display.html
+++ b/portal/home/home/display.html
@@ -1,6 +1,7 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<h3>{{global.gender}} {{global.name}} {{global.family}}</h3>
+<h3>{{global.type|lang}} گرامی</h3>
+<h3>{{global.gender|lang}} {{global.name}} {{global.family}}</h3>
 <h3>به پورتال جامع مرکز قرآن و حدیث کریمه اهل بیت علیها السلام خوش آمدید.</h3>
 {%endblock%}
