--- a/portal/classification/absence/display.html
+++ b/portal/classification/absence/display.html
@@ -13,29 +13,24 @@
 
 <script type="text/javascript">
 	$(".absence-date-main")[0].callBackDate = function(){
-		var date = $(this).val();
-		$(".absence-date").val(date);
+		// var date = $(this).val();
+		// $(".absence-date").val(date);
+		set_date();
 	}
 
-	// $(".absence-date-main").keyup(function(){
-	// 	set_date();
-	// });
-	// $(".absence-date-main").change(function(){
-	// 	set_date();
-	// });
-	// $(".absence-date-main").focus(function(){
-	// 	set_date();
-	// });
-	// $(".absence-date-main").focusout(function(){
-	// 	set_date();
-	// });
-	// $(".absence-date-main").val().change(function(){
-	// 	set_date();
-	// });
 	function set_date() {
 		var date = $(".absence-date-main").val();
 		$(".absence-date").each(function(){
-			
+			var x = $(this).parents('td');
+			var y = $(x).parents('tr');
+			console.log(y);
+			// console.log($(y).childs("td"));
+
+			// if($(this).parentsarent('tr').child('.absence-check').checked()) {
+			// 	console.log("he");
+			// }else{
+			// 	console.log("ne");
+			// }
 			$(this).val(date);
 		});
 	}
