--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -45,8 +45,7 @@
 	<script type="text/javascript" src="static/jquery-ui/jquery.multiselect.min.js"></script>
 	<!-- Custom JS -->
 	<script type="text/javascript" src="static/persianDatepicker/js/persianDatepicker.js"></script>
-	<script type="text/javascript" src="{{"static/js/main.js"|fcache}}"></script>
-	<script type="text/javascript" src="{{"static/js/modelSend.js"|fcache}}"></script>
+	<script type="text/javascript" src="{{"static/js/banoo.min.js"|fcache}}"></script>
 	<!-- jquery.ui.datepicker -->
 	<!-- Autocomplete -->
 	<script type="text/javascript" src="static/js/autocomplete.js"></script>
