--- a/portal/users/list/display.html
+++ b/portal/users/list/display.html
@@ -5,7 +5,7 @@
 </form>
 {{tagMaker.list(person)}}
 <style>
-	#data_table{
+	#dtableme{
 		direction: rtl;
 		text-align: right;
 	}
@@ -42,7 +42,7 @@
 		transition: all 100ms linear;
 	}
 </style>
-<table id="data_table" class="display" cellspacing="0" width="100%">
+<table id="dtableme" class="display" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>نام</th>
