--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -53,6 +53,8 @@
 	<link rel="stylesheet" href="static/clockpicker/jquery-clockpicker.css">
 	<script src="static/clockpicker/jquery-clockpicker.js"></script>
 
+	<script src="static/js/jquery.multiple.select.js"></script>
+
 	<script type="text/javascript" src="{{"static/js/banoo.min.js"|fcache}}"></script>
 	{%endblock%}
 </head>
