--- a/portal/city/option/display.html
+++ b/portal/city/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="city/{{global.url}}">
 	{{forms.make(form.city)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
