--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -59,6 +59,42 @@
 	<script src="static/js/jquery.multiple.select.js"></script>
 
 	<script type="text/javascript" src="{{"static/js/banoo.min.js"|fcache}}"></script>
+	<style type="text/css">
+		<style>
+			.dataTable {
+				width: 100%;
+				border-spacing: 1px;
+			}
+			.dataTable tr.even {
+				background-color: #fafafa !important;
+			}
+			.dataTable tr.odd {
+				background-color: #f0f9f0 !important;
+			}
+			.dataTable tr:hover td {
+				color: #333;
+				background-color: #B0C4B0 !important;
+
+			}
+			.dataTable th {
+				background-color: #f0f9f0 !important;
+				color: #393939;
+				font-size: 12px;
+				font-family: "WYekan";
+			}
+			.dataTable td {
+				text-align: right;
+				padding: 5px 10px;
+				font-family: "WRoya";
+				color: #666;
+				font-size: 13px;
+				-webkit-transition: all 100ms linear;
+				-moz-transition: all 100ms linear;
+				-o-transition: all 100ms linear;
+				transition: all 100ms linear;
+			}
+		</style>
+	</style>
 	{%endblock%}
 </head>
 
