--- a/portal/main/xhr.html
+++ b/portal/main/xhr.html
@@ -1,6 +1,9 @@
 {% if extendForm%}
 {% import macro.forms as forms %}
 {% endif %}
+{% if Extend_dtable%}
+{% import macro.dtable as dtable %}
+{% endif %}
 {% import macro.list as tagMaker %}
 <div id="content">
 {%block content%}
