--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -54,6 +54,7 @@
 
 	<!-- Clock Picker -->
 	<link rel="stylesheet" href="static/clockpicker/jquery-clockpicker.css">
+	<link rel="stylesheet" href="static/css/icss.css">
 	<script src="static/clockpicker/jquery-clockpicker.js"></script>
 
 	<script src="static/js/jquery.multiple.select.js"></script>
